# pram

./: CMakeLists.txt  Dockerfile  README.rst  meson.build  pram  pram.1
.github/workflows/: ci.yaml
test/: 00basic.sh  01signoff-missing.sh  01signoff-partial.sh  01signoff-present.sh  02bug-number.sh  02bug-url.sh  02closes-number.sh  02closes-url.sh  03bug-multiple.sh  03closes-multiple.sh  03combined-bug-closes.sh  03combined-signoff-bug.sh  04interactive-no.sh  04interactive-yes.sh  05editor-empty.sh  05editor-fail.sh  06gpgsign.sh  10threeway-disabled.sh  10threeway.sh  11combined-partof-signoff-bug.sh  11partof.sh  common-setup.sh
